compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__imported_constructor_instead_of_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 283
expression: "import module.{Wibble}\n\npub fn main(x: Wibble) {\n  todo\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- module.gleam
pub type Wibble { Wibble }

-- main.gleam
import module.{Wibble}

pub fn main(x: Wibble) {
  todo
}

----- ERROR
error: Unknown type
  ┌─ /src/one/two.gleam:3:16
  │
3 │ pub fn main(x: Wibble) {
  │                ^^^^^^

The type `Wibble` is not defined or imported in this module.
There is a value in scope with the name `Wibble`, but no type in scope with
that name.
