compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__module_alias_used_as_a_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 318
expression: "\nimport one/two\n\npub fn main() {\n  two\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
-- one/two.gleam


-- main.gleam

import one/two

pub fn main() {
  two
}


----- ERROR
error: Module `two` used as a value
  ┌─ /src/one/two.gleam:5:3
  │
5 │   two
  │   ^^^

Modules are not values, so you cannot assign them to variables, pass them
to functions, or anything else that you would do with a value.
