compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__unqualified_using_opaque_constructor.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 175
expression: "import one.{Two}\n\npub fn main() {\n  Two\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- one.gleam
pub opaque type Two { Two }

-- main.gleam
import one.{Two}

pub fn main() {
  Two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{Two}
  │             ^^^ Did you mean `type Two`?

`Two` is only a type, it cannot be imported as a value.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:3
  │
4 │   Two
  │   ^^^

The custom type variant constructor `Two` is not in scope here.
