compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__unqualified_using_private_constructor_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 163
expression: "import one.{Two}\n\npub fn main(x) {\n  let Two = x\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- one.gleam
type Two { Two }

-- main.gleam
import one.{Two}

pub fn main(x) {
  let Two = x
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{Two}
  │             ^^^

The module `one` does not have a `Two` value.

error: Unknown variable
  ┌─ /src/one/two.gleam:4:7
  │
4 │   let Two = x
  │       ^^^

The custom type variant constructor `Two` is not in scope here.
