compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__imports__using_private_constructor_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/imports.rs
assertion_line: 43
expression: "import one\n\npub fn main(x) {\n  let one.Two = x\n}"
snapshot_kind: text
---
----- SOURCE CODE
-- one.gleam
type Two { Two }

-- main.gleam
import one

pub fn main(x) {
  let one.Two = x
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.gleam:4:7
  │
4 │   let one.Two = x
  │       ^^^^^^^

The module `one` does not have a `Two` value.
